# pydepp

./: .gitignore  LICENSE  README.md  depp.py  example.py  pyproject.toml
debian/: changelog  control  copyright  rules
pydepp/: __init__.py  depp.py  example.py  ffi.py  loader.py
