[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydepp"
version = "0.1.0"
description = "Python interface for the Digilent DEPP protocol using the Adept SDK"
authors = [{ name = "Max Mustermann", email = "you@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydepp"]
