[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydepp"
version = "0.1.1"
description = "Python bindings for the Digilent DEPP protocol"
authors = [{ name = "0xMax42", email = "mail@0xMax42.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydepp"]
